--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-DATABASE_URL = "mysql://root:@localhost:3306/essential-oil"
+DATABASE_URL = "mysql://root:@localhost:3306/koseeker"
 PORT=3000
 SECRET = moklet
