--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.540.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
