--- a/.hintrc
+++ b/.hintrc
@@ -28,7 +28,8 @@
     "axe/structure": [
       "default",
       {
-        "list": "off"
+        "list": "off",
+        "listitem": "off"
       }
     ]
   }
