--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@prisma/client": "^5.19.1",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.4",
     "express": "^4.20.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
